some quick updates

--- a/css/pointer.css
+++ b/css/pointer.css
@@ -1,7 +1,7 @@
 body {
             margin: 0px;
         }
-        #container{
+        #container1{
             width: 320px;
             margin: 0px auto;
         }
