--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -34,7 +34,9 @@
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  text-align: center;
+  vertical-align: middle; }
 .column,
 .columns {
   width: 100%;
@@ -63,7 +65,7 @@
   .one.columns                    { width: 4.66666666667%; }
   .two.columns                    { width: 13.3333333333%; }
   .three.columns                  { width: 22%;            }
-  .four.columns                   { width: 30.6666666667%; }
+  .four.columns                   { width: 30.6666666667%; background-color: lightgrey}
   .five.columns                   { width: 39.3333333333%; }
   .six.columns                    { width: 48%;            }
   .seven.columns                  { width: 56.6666666667%; }
