--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -53,7 +53,8 @@
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
-    width: 80%; }
+    width: 80%; 
+    height: 100%}
   .column,
   .columns {
     margin-left: 4%; }
